--- a/Hamburger Menu/style.css
+++ b/Hamburger Menu/style.css
@@ -1,8 +1,4 @@
-// delete the following line if no text is used
-// edit the line if you wanna use other fonts
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
-
-// use only the available space inside the 400x400 frame
 .frame {
   position: absolute;
   top: 50%;
@@ -12,133 +8,218 @@
   margin-top: -200px;
   margin-left: -200px;
   border-radius: 2px;
-	box-shadow: 4px 8px 16px 0 rgba(0,0,0,0.1);
-	overflow: hidden;
+  box-shadow: 4px 8px 16px 0 rgba(0, 0, 0, 0.1);
+  overflow: hidden;
   background: #3faf82;
   color: white;
-	font-family: 'Open Sans', Helvetica, sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  font-family: "Open Sans", Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .center {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
-.menu-icon{
-	position:relative;
-	width:80px;
-	height:52px;
-	cursor:pointer;
-	z-index:50;
+
+.menu-icon {
+  position: relative;
+  width: 80px;
+  height: 52px;
+  cursor: pointer;
+  z-index: 50;
 }
+
 .menu-icon .line-1,
 .menu-icon .line-2,
-.menu-icon .line-3{
-	position:absolute;
-	width:100%;
-	height:8px;
-	background-color:white;
-	border-radius:3px;
-	box-shadow:0 2px 10px 0 rgba(0, 0, 0, 0.3);
+.menu-icon .line-3 {
+  position: absolute;
+  width: 100%;
+  height: 8px;
+  background-color: white;
+  border-radius: 3px;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.3);
 }
-.menu-icon .line-1{
-	top:0;
+
+.menu-icon .line-1 {
+  top: 0;
 }
-.menu-icon .line-2{
-	top:22px;
+
+.menu-icon .line-2 {
+  top: 22px;
 }
-.menu-icon .line-3{
-	top:44px;
+
+.menu-icon .line-3 {
+  top: 44px;
 }
-.menu-active{
-	.line-1{
-		animation:animate-line-1 1s ease-in-out;
-		animation-fill-mode:forwards;
-	}
-	.line-2{
-		animation:animate-line-2 1s ease-in-out;
-		animation-fill-mode:forwards;
-	}
-	.line-3{
-		animation:animate-line-3 1s ease-in-out;
-		animation-fill-mode:forwards;
-	}
+
+.menu-active .line-1 {
+  -webkit-animation: animate-line-1 1s ease-in-out;
+          animation: animate-line-1 1s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
-@keyframes animate-line-1{
-	0%{
-		transform:translate3d(0,0,0) rotate(0deg);
-	}
-	50%{
-		transform:translate3d(0,22px,0) rotate(0deg) ;
-	}
-	100%{
-		transform:translate3d(0,22px,0) rotate(45deg) ;
-	}
+.menu-active .line-2 {
+  -webkit-animation: animate-line-2 1s ease-in-out;
+          animation: animate-line-2 1s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
-@keyframes animate-line-2{
-	0%{transform:scale(1);
-	opacity:1;}
-	100%{
-		transform:scale(0);
-		opacity:0;
-	}
+.menu-active .line-3 {
+  -webkit-animation: animate-line-3 1s ease-in-out;
+          animation: animate-line-3 1s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
-@keyframes animate-line-3{
-	0%{
-		transform:translate3d(0,0,0) rotate(0deg) ;
-	}
-	50%{
-		transform:translate3d(0,-22px,0) rotate(0deg) ;
-	}
-	100%{
-		transform:translate3d(0,-22px,0) rotate(135deg);
-	}
+
+@-webkit-keyframes animate-line-1 {
+  0% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
+  50% {
+    transform: translate3d(0, 22px, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(0, 22px, 0) rotate(45deg);
+  }
 }
-.menu-closed{
-	.line-1{
-		animation:animate-line-1-rev 1s ease-in-out;
-		animation-fill-mode:forwards;
-	}
-	.line-2{
-		animation:animate-line-2-rev 1s ease-in-out;
-		animation-fill-mode:forwards;
-	}
-	.line-3{
-		animation:animate-line-3-rev 1s ease-in-out;
-		animation-fill-mode:forwards;
-	}
+
+@keyframes animate-line-1 {
+  0% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
+  50% {
+    transform: translate3d(0, 22px, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(0, 22px, 0) rotate(45deg);
+  }
 }
-@keyframes animate-line-1-rev{
-	0%{
-		transform:translate3d(0,22px,0) rotate(45deg) ;
-	}
-	50%{
-		transform:translate3d(0,22px,0) rotate(0deg) ;
-	}
-	100%{
-		transform:translate3d(0,0,0) rotate(0deg);
-	}
+@-webkit-keyframes animate-line-2 {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0;
+  }
 }
-@keyframes animate-line-2-rev{
-	0%{
-	transform:scale(0);
-		opacity:0;}
-	100%{
-		transform:scale(1);
-	opacity:1;
-	}
+@keyframes animate-line-2 {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0;
+  }
 }
-@keyframes animate-line-3-rev{
-	0%{
-		transform:translate3d(0,-22px,0) rotate(135deg);
-	}
-	50%{
-		transform:translate3d(0,-22px,0) rotate(0deg) ;
-	}
-	100%{
-		transform:translate3d(0,0,0) rotate(0deg) ;
-	}
+@-webkit-keyframes animate-line-3 {
+  0% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
+  50% {
+    transform: translate3d(0, -22px, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(0, -22px, 0) rotate(135deg);
+  }
+}
+@keyframes animate-line-3 {
+  0% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
+  50% {
+    transform: translate3d(0, -22px, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(0, -22px, 0) rotate(135deg);
+  }
+}
+.menu-closed .line-1 {
+  -webkit-animation: animate-line-1-rev 1s ease-in-out;
+          animation: animate-line-1-rev 1s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+.menu-closed .line-2 {
+  -webkit-animation: animate-line-2-rev 1s ease-in-out;
+          animation: animate-line-2-rev 1s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+.menu-closed .line-3 {
+  -webkit-animation: animate-line-3-rev 1s ease-in-out;
+          animation: animate-line-3-rev 1s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes animate-line-1-rev {
+  0% {
+    transform: translate3d(0, 22px, 0) rotate(45deg);
+  }
+  50% {
+    transform: translate3d(0, 22px, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
+}
+
+@keyframes animate-line-1-rev {
+  0% {
+    transform: translate3d(0, 22px, 0) rotate(45deg);
+  }
+  50% {
+    transform: translate3d(0, 22px, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
+}
+@-webkit-keyframes animate-line-2-rev {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes animate-line-2-rev {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes animate-line-3-rev {
+  0% {
+    transform: translate3d(0, -22px, 0) rotate(135deg);
+  }
+  50% {
+    transform: translate3d(0, -22px, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
+}
+@keyframes animate-line-3-rev {
+  0% {
+    transform: translate3d(0, -22px, 0) rotate(135deg);
+  }
+  50% {
+    transform: translate3d(0, -22px, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(0, 0, 0) rotate(0deg);
+  }
 }
