--- a/white-lotus-responsive/styles.css
+++ b/white-lotus-responsive/styles.css
@@ -188,6 +188,7 @@ html {
     display: grid;
     grid-template-columns: repeat(4,1fr);
     gap: 2rem;
+    width: fit-content;
 }
 
 .service-element img{
